deploy/prod/traefik-middleware-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: microservices-strip-prefix
  namespace: microservices
spec:
  stripPrefix:
    prefixes:
      - /site-analyzer
      - /scraper
      - /lightpanda-cdp
      - /lightpanda-mcp
