deploy/prod/site-analyzer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-analyzer
  namespace: microservices
  labels:
    app: site-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site-analyzer
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: site-analyzer
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: site-analyzer
          image: ghcr.io/openstaticfish/microservices/site-analyzer:4c6b1dc752feab5ef4c52f40d5c97a85ec59bcba
          ports:
            - containerPort: 8090
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8090
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8090
            initialDelaySeconds: 2
            periodSeconds: 3
            timeoutSeconds: 1
            failureThreshold: 2
