deploy/prod/lightpanda-cdp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lightpanda-cdp
  namespace: microservices
  labels:
    app: lightpanda-cdp
spec:
  type: ClusterIP
  selector:
    app: lightpanda-cdp
  ports:
    - name: cdp
      protocol: TCP
      port: 9222
      targetPort: 9222
