deploy/prod/scraper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scraper
  namespace: microservices
  labels:
    app: scraper
spec:
  type: ClusterIP
  selector:
    app: scraper
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
