deploy/prod/site-analyzer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-analyzer
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: site-analyzer
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: 8090
